subscription type page added

--- a/SucculentWebsite/src/main/resources/static/css/homepage.css
+++ b/SucculentWebsite/src/main/resources/static/css/homepage.css
@@ -93,12 +93,11 @@ h1{
     padding-bottom: 50px; 
     font-size: 30pt; 
 }
-
 .sign-up{
     margin-top: 75px; 
     width: 100%; 
     margin-bottom: 50px; 
-    margin-left: 100px; 
+    text-align: center; 
     padding-top: 50px; 
 }
 .sign-up h3{
