--- a/SucculentWebsite/src/main/resources/static/css/homepage.css
+++ b/SucculentWebsite/src/main/resources/static/css/homepage.css
@@ -16,6 +16,8 @@
     display: inline-block; 
     box-shadow: 0 0 2px 2px #cdd7d0;
     opacity: .80;
+    display: inline-block; 
+   
 }
 .tall-succ{
     max-height: 320px; 
@@ -23,6 +25,8 @@
     opacity: .80;
     position: relative; 
     z-index: -1; 
+    display: inline-block;
+    
 }
 .header h3{
     margin-top: 20px; 
@@ -49,6 +53,7 @@
     height: 900px; 
     left: 260px;  
    	top: 70px;
+   	
 }
 #overlay-one{
 	z-index: -1; 
@@ -56,7 +61,7 @@
 	opacity: .15;
 	height: 700px; 
 	bottom: 350px; 
-	
+	position: absolute; 
 }
 #overlay-two{
 	z-index: -1; 
@@ -65,6 +70,7 @@
 	height: 700px; 
 	bottom: 350px; 
 	left: 740px; 
+	position: absolute; 
 	
 }
 footer{
@@ -85,6 +91,7 @@ footer{
     box-shadow: 0 0 2px 2px #cdd7d0;
     vertical-align: top;
     padding-top: 20px; 
+    position: relative; 
 }
 
 h1{
