--- a/SucculentWebsite/src/main/resources/static/css/homepage.css
+++ b/SucculentWebsite/src/main/resources/static/css/homepage.css
@@ -60,8 +60,7 @@
 	position: fixed; 
 	opacity: .15;
 	height: 700px; 
-	bottom: 350px; 
-	position: absolute; 
+	bottom: 350px;  
 }
 #overlay-two{
 	z-index: -1; 
@@ -70,7 +69,6 @@
 	height: 700px; 
 	bottom: 350px; 
 	left: 740px; 
-	position: absolute; 
 	
 }
 footer{
@@ -144,11 +142,13 @@ h1{
     list-style: none;
     margin: 0;
     padding: 0;
+    
 }
 
 .nav a{
     text-decoration: none; 
     color: white; 
+    cursor: pointer; 
 }
 
 
