--- a/SucculentWebsite/src/main/resources/static/css/template.css
+++ b/SucculentWebsite/src/main/resources/static/css/template.css
@@ -8,29 +8,11 @@
     background-image: linear-gradient(#F8F8F8,#547960);
     background-repeat: no-repeat;
     color:#140f0b;
-    width: 100%;
-    min-width: 1000px; 
-}
-h1{
-    text-align: center; 
-    padding-top: 75px; 
-    padding-bottom: 50px; 
-    font-size: 30pt; 
+    width: 100%; 
+    height: 100%;
 }
 
-footer{
-    padding-top: 90px; 
-    text-align: center;
-    font-size: 10pt; 
-    padding-bottom: 10px; 
-}
-.tall-succ{
-    height: 320px; 
-    box-shadow: 0 0 2px 2px #cdd7d0;
-    opacity: .80;
-    position: relative; 
-    z-index: -1; 
-}
+
 .header h3{
     margin-top: 20px; 
     color: white; 
@@ -39,47 +21,7 @@ footer{
     text-align: right;  
     margin-right: 160px;
 }
-.errors{
-	font-size: 8pt; 
-}
-.sub-butt{
-	font-family: 'Rock Salt', cursive; 
-	font-size: 10pt;  
-    border-radius: 5px;  
-    border: solid black 2px; 
-    background-color: transparent; 
-    height: 50px; 
-    width: 350px; 
-    margin-top: 25px;  
-    margin-bottom: 25px;  
-}
-.sub-butt:hover{
-    background-color: #BBFD5E;
-}
 
-.reg-form{
-	font-size: 10pt;  
-	min-width: 500px;
-	margin: 50px 400px; 
-	text-align: center; 
-	
-}
-
-.reg-form h3{
-	font-size: 15pt; 
-}
-
-input{
-	border-radius: 3px; 
-	height: 45px; 
-	width: 250px; 
-	border: solid #140f0b 1px; 
-	font-family: 'Rock Salt', cursive; 
-	background-color: #F8F8F8;
-	opacity: .65;
-	padding-left: 5px; 
-	
-}
 .header a{
     text-decoration: none; 
     color: white; 
@@ -96,6 +38,7 @@ input{
     height: 900px; 
     left: 260px;  
    	top: 70px;
+   	
 }
 #overlay-one{
 	z-index: -1; 
@@ -112,8 +55,37 @@ input{
 	height: 700px; 
 	bottom: 350px; 
 	left: 740px; 
+	 
 	
 }
+footer{
+    padding-top: 90px; 
+    text-align: center;
+    font-size: 10pt; 
+    padding-bottom: 10px; 
+}
+
+h1{
+    text-align: center; 
+    padding-top: 75px; 
+    padding-bottom: 50px; 
+    font-size: 30pt; 
+}
+.subscribe{
+    font-family: 'Rock Salt', cursive;
+    padding: 5px 10px 5px 10px;  
+    border-radius: 5px; 
+    margin-top: 75px; 
+    margin-left: 600px; 
+    border: solid black 2px; 
+    font-size: 16pt; 
+    background-color: transparent;
+}
+
+.subscribe:hover{
+    background-color: #BBFD5E;
+}
+
 .nav ul {
     position: absolute;
     top: 50%;
